[package]
name = "lock-server"
version = "0.1.0"
authors = ["sunnysab <sunnysab@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "thin"
overflow-checks = false

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
sqlx = { version = "0.3.5", features = ["sqlite"] }

log = "*"
env_logger = "0.8"

anyhow = "*"
thiserror = "*"